attempt to fix the style for all the input fields on Safari

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -671,6 +671,10 @@ textarea {
 	min-height: 100px;
 }
 
+input, input[type='text'], input[type=email] {
+	-webkit-appearance:none;
+}
+
 .widget.profile form fieldset input, .signupform fieldset input, .blogsearch form input {
 	width: 42%;
 	@media @tablet {
